--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="name">Item Name</string>
     <string name="quantity">Item Quantity</string>
     <string name="price">Item Price</string>
+    <string name="partition">Store</string>
 </resources>
